@@ -50,6 +50,8 @@
             --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
             --add-exports com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=com.fasterxml.jackson.databind
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=com.fasterxml.jackson.databind
         </javaModulesSurefireArgLine>
     </properties>
 
@@ -71,6 +73,11 @@
             <artifactId>azure-core-http-netty</artifactId>
             <version>1.14.1</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
         </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-json</artifactId>
+        <version>1.1.0</version> <!-- {x-version-update;com.azure:azure-json;dependency} -->
+      </dependency>
 
         <!-- test -->
         <dependency>
